=== Version 0.0.2
* Enhancements
  * Added support for the following elements
    * div
    * Button

=== Version 0.0.1 / 2011-05-22
* Enhancements
  * Support for the following elements
    * check box
    * link
    * radio button
    * select list
    * text field
  
  * Support for the following page level functions
    * text
    * html
    * title