@@ -14,12 +14,13 @@ module PageObject
         if platform[:platform] == :watir
           require 'page-object/platforms/watir_table_row'
           self.class.send :include, PageObject::Platforms::WatirTableRow
-        else
+        elsif platform[:platform] == :selenium
           require 'page-object/platforms/selenium_table_row'
           self.class.send :include, PageObject::Platforms::SeleniumTableRow
+        else
+          raise ArgumentError, "expect platform to be :watir or :selenium"          
         end
       end
-
     end
   end
 end
